feat: CORS configurable por env var para Railway + doc de user journeys
- SecurityConfig.java: ALLOWED_ORIGINS por env var (antes hardcoded a localhost:3000, bloqueaba el frontend real en Railway). Default local sigue siendo localhost:3000.

- docs/USER_JOURNEYS.md: los 4 journeys criticos que motivaron el hallazgo de /register faltante (14 jul 2026). Journey 1 actualizado: implementado + smoke test en verde (local), pendiente confirmar contra Railway.